# vanilla-recipes

./: .gitignore  CHANGELOG.md  README.md  beet.yaml  main.py  pack.mcmeta  pyproject.toml  vanilla_recipes.py
.github/workflows/: push-to-smithed.py  release.yml
data/minecraft/tags/functions/: load.json
data/vanilla_recipes/function/: load.mcfunction  shaped_special.mcfunction  shapeless_special.mcfunction
data/vanilla_recipes/functions/: query_tags_special.mcfunction
data/vanilla_recipes/tags/item/: dyes.json  shulker_boxes.json
